@@ -221,6 +221,7 @@ gimp_display_shell_init (GimpDisplayShell *shell)
   shell->offset_y               = 0;
 
   shell->last_scale             = 0.0;
+  shell->last_scale_time        = 0;
   shell->last_offset_x          = 0;
   shell->last_offset_y          = 0;
 
