@@ -1,3 +1,11 @@
+2007-03-04  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell.[ch]
+	* app/display/gimpdisplayshell-scale.c: only change the remembered
+	last scale value if the last change occured more than a second ago.
+
+	* app/tools/gimprectangletool.c: fixed compiler warnings.
+
 2007-03-03  Roman Joost  <romanofski@gimp.org>
 
 	* authors.xml: added missing, active documentation authors.
